Implementacion de logica para obtener tipos de usuarios modificada